[gd_scene load_steps=17 format=3 uid="uid://cw4thxmipjjku"]

[ext_resource type="Texture2D" uid="uid://df0gnmon7gwon" path="res://Idle+Tycoon+Assets/Idle Assets/Sprites/Fondo.png" id="1_qikps"]
[ext_resource type="Texture2D" uid="uid://codl1em0t7g3a" path="res://Idle+Tycoon+Assets/Idle Assets/Sprites/Counter.png" id="2_i1e5p"]
[ext_resource type="Texture2D" uid="uid://d3crom8hunfy1" path="res://Idle+Tycoon+Assets/Idle Assets/Sprites/Counter_half.png" id="3_ciybh"]
[ext_resource type="Texture2D" uid="uid://bkyflxlsl2igp" path="res://Idle+Tycoon+Assets/Idle Assets/Sprites/UI/Coffee.png" id="4_56qi8"]
[ext_resource type="PackedScene" uid="uid://c7fk5n45110oy" path="res://Scenes/Cashier/cashier.tscn" id="4_i1e5p"]
[ext_resource type="Texture2D" uid="uid://dta8k1m0wggvp" path="res://Idle+Tycoon+Assets/Idle Assets/Sprites/UI/Burger.png" id="5_2vowc"]
[ext_resource type="Script" uid="uid://bja3rgojnncbr" path="res://Managers/customer_manager.gd" id="5_ciybh"]
[ext_resource type="Script" uid="uid://ds21qpxpsssrg" path="res://data/customer_data.gd" id="6_qtymf"]
[ext_resource type="Resource" uid="uid://8b3tjuowh47d" path="res://data/customer_data_green.tres" id="7_ypmwd"]
[ext_resource type="Resource" uid="uid://b0kwrq480a7ey" path="res://data/customer_data_pink.tres" id="8_oejk7"]
[ext_resource type="Resource" uid="uid://b5hh5pfgx276k" path="res://data/customer_data_purple.tres" id="9_upfqs"]
[ext_resource type="Resource" uid="uid://ds6t3wgca7cur" path="res://data/customer_data_red.tres" id="10_8e3kh"]
[ext_resource type="Resource" uid="uid://3en01exxd64t" path="res://data/customer_data_yellow.tres" id="11_56qi8"]
[ext_resource type="PackedScene" uid="uid://rp0ygarvdjij" path="res://Scenes/Customer/customer.tscn" id="12_ypmwd"]
[ext_resource type="Script" uid="uid://cv6j7ml4v5t86" path="res://Managers/counter_manager.gd" id="13_oejk7"]
[ext_resource type="Script" uid="uid://che6kaw0rfre8" path="res://Managers/cashier_manager.gd" id="13_upfqs"]

[node name="Game" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_qikps")
centered = false

[node name="MainCounter" type="Sprite2D" parent="."]
position = Vector2(537, 855)
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_i1e5p")

[node name="CoffeeCounter" type="Sprite2D" parent="."]
position = Vector2(417, 1382)
scale = Vector2(0.8, 0.9)
texture = ExtResource("3_ciybh")

[node name="Sprite2D" type="Sprite2D" parent="CoffeeCounter"]
position = Vector2(-81.25, -60)
scale = Vector2(0.35, 0.35)
texture = ExtResource("4_56qi8")

[node name="BurgerCounter" type="Sprite2D" parent="."]
position = Vector2(657, 1382)
scale = Vector2(0.8, 0.9)
texture = ExtResource("3_ciybh")

[node name="Sprite2D" type="Sprite2D" parent="BurgerCounter"]
position = Vector2(-62.5, -46.6667)
scale = Vector2(0.35, 0.35)
texture = ExtResource("5_2vowc")

[node name="CustomerManager" type="Node" parent="." node_paths=PackedStringArray("spawn_positions")]
script = ExtResource("5_ciybh")
spawn_positions = [NodePath("TopSpawnPos"), NodePath("BottomSpawnPos")]
customer_sprites = Array[ExtResource("6_qtymf")]([ExtResource("7_ypmwd"), ExtResource("8_oejk7"), ExtResource("9_upfqs"), ExtResource("10_8e3kh"), ExtResource("11_56qi8")])
customer_scene = ExtResource("12_ypmwd")

[node name="TopSpawnPos" type="Marker2D" parent="CustomerManager"]
position = Vector2(-206, 211)

[node name="BottomSpawnPos" type="Marker2D" parent="CustomerManager"]
position = Vector2(-206, 648)

[node name="Timer" type="Timer" parent="CustomerManager"]
wait_time = 3.5
autostart = true

[node name="CounterManager" type="Node" parent="." node_paths=PackedStringArray("counter_positions")]
unique_name_in_owner = true
script = ExtResource("13_oejk7")
counter_positions = [NodePath("Marker2D"), NodePath("Marker2D2"), NodePath("Marker2D3"), NodePath("Marker2D4")]

[node name="Marker2D" type="Marker2D" parent="CounterManager"]
position = Vector2(379, 752)

[node name="Marker2D2" type="Marker2D" parent="CounterManager"]
position = Vector2(479.915, 752)

[node name="Marker2D3" type="Marker2D" parent="CounterManager"]
position = Vector2(586.785, 752)

[node name="Marker2D4" type="Marker2D" parent="CounterManager"]
position = Vector2(685.675, 752)

[node name="CashierManager" type="Node" parent="." node_paths=PackedStringArray("spawn_pos")]
script = ExtResource("13_upfqs")
cashier_scene = ExtResource("4_i1e5p")
spawn_pos = NodePath("SpawnPosition")

[node name="SpawnPosition" type="Marker2D" parent="CashierManager"]
position = Vector2(519, 1086)
rotation = 1.5708

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(425, 1250)

[connection signal="timeout" from="CustomerManager/Timer" to="CustomerManager" method="_on_timer_timeout"]
